# d3d_extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_API.md  docker-compose.yml  docker_validation.md  ocr2.py  ocr3.py  ocr_d3d.py  ocr_mistral.py  process_pdfs.py  pyproject.toml  run_pipeline.py  test_api.py  test_docker.sh  test_ocr.ipynb
api/: main.py  models.py
src/extraction/: extractor.py  signatures.py
src/ocr/: processor.py  strategies.py
src/utils/: file_utils.py  medical_terms.py
