[project]
name = "result-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy-ai>=2.6.27",
    "jupyter>=1.1.1",
    "marker-pdf>=1.8.2",
    "mistralai>=1.9.3",
    "pymupdf>=1.24.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "tqdm>=4.67.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]
